@@ -7,7 +7,7 @@
 enrich_motifs(motifs, sequences, bkg.sequences, search.mode = "hits",
   max.p = 1e-05, max.q = 1e-05, max.e = 0.001, qval.method = "fdr",
   positional.test = "t.test", threshold = 0.001,
-  threshold.type = "pvalue", verbose = 1, RC = FALSE, use.freq = 1,
+  threshold.type = "pvalue", verbose = 0, RC = FALSE, use.freq = 1,
   shuffle.k = 2, shuffle.method = "euler",
   return.scan.results = FALSE, progress = FALSE, BP = FALSE,
   nthreads = 1, rng.seed = sample.int(1e+09, 1))
